Fix layerlist scrollbar for Windows/OS X native UI

--- a/app/components/editor/editor.less
+++ b/app/components/editor/editor.less
@@ -145,6 +145,7 @@
   width: auto;
   position: relative;
   height: 100%;
+  width: 100%;
   z-index: 10;
   overflow: hidden;
 }
@@ -154,6 +155,7 @@
 .style-editor {
   padding-bottom: 108px;
   height: 100%;
+  width: 100%;
 }
 
 /* Resizer bar */
