--- a/app/components/editor/layerlist/layerlist.less
+++ b/app/components/editor/layerlist/layerlist.less
@@ -1,7 +1,6 @@
 /* layerlist.less */
 
 @import "../../../variables.less";
-
 .editor-layerlist {
   -webkit-transition: width 0.4s ease-in-out, max-width 0.4s ease-in-out, min-width 0.4s ease-in-out;
   -moz-transition:  width 0.4s ease-in-out, max-width 0.4s ease-in-out, min-width 0.4s ease-in-out;
@@ -18,14 +17,19 @@
 
   position: relative;
   float: left;
-  
 
   .reorder-info {
     font-size: 11px;
     color: @md-lt-gray;
-    margin-top: 8px;
-    margin-bottom: 8px;
+    background-color: @gray;
+    padding-top: 8px;
+    padding-bottom: 12px;
     text-align: center;
+
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 17px;
   }
 
   h6.title {
@@ -36,6 +40,7 @@
   }
 
   > ul {
+    padding-top: 36px;
     height: 100%;
     overflow-y: auto;
     list-style-type: none;
@@ -67,7 +72,7 @@
           height: 28px;
           display: table-cell;
           vertical-align: middle;
-          padding-right: 16px;
+          padding-right: 6px;
           padding-left: 6px;
 
           i {
@@ -96,6 +101,26 @@
     > li.active {
       background-color: @skyblue;
       color: white;
+    }
+  }
+}
+
+//Handle OSX transparent overlay scrollbar
+.editor-layerlist.osx {
+  .reorder-info {
+    right: 0px;
+    box-shadow: inset -5px 0px 5px -3px @dark-gray;
+  }
+  > ul {
+    padding-top: 0px;
+    margin-top: 36px;
+
+    > li {
+      .map-layer-overlay {
+        .icons {
+          padding-right: 16px;
+        }
+      }
     }
   }
 }
